# beetimer

./: .gitignore  README.md  pyproject.toml  requirements.txt
beetimer/: beetimer.py  utils.py
