[tool.poetry]
name = "beetimer"
version = "0.1.1"
description = ""
authors = ["fergus <fergusfettes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyminder = "^1.1.1"
typer = "^0.9.0"
rich = "^13.7.0"

[tool.poetry.scripts]
beetimer = "beetimer.beetimer:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
